src/App.css
/* ... */
/*--------------------------------
            FOOTER
----------------------------------*/
.seccion-footer {
    background-color: #009c86;
    padding: 45px;
    flex-direction: column;
}

/* -- MENÚ -- */
.nav-footer {
    justify-content: center;
    align-items: center;
    padding: 20px 0;
    margin: 10px auto 10px auto;
}

.menu-footer {
    font-size: 14px;
    color: #00dfc0;
}

.emoji-size {
    font-size: 25px;
}

/* -- LOGOS -- */
.div-contacto {
    justify-content: center;
}

.img-contacto {
    width: 80px;
    padding: 10px;
    margin: 10px;
    transition: 0.3s;
}

/* -- TEXTO -- */
.span-footer {
    color: #fafafa;
    cursor: pointer;
}

.span-footer a {
    color: #fafafa;
}

.amor {
    color: #00dfc0;
    font-size: 18px;
}

.footer-recursos {
    display: none;
}


/*-------------------------
    @MEDIA TABLETS
-------------------------*/
@media (min-width: 600px) and (max-width: 900px) {

    /*--------------------------------
            NAV BAR HEADER
    ----------------------------------*/

    .nav-header {
        margin-right: 5%;
    }

    .menu-header {
        font-size: 16px;
    }

    /*--------------------------------
            SECCIÓN HOLA
    ----------------------------------*/

    .seccion-hola, .contenedor-hola, .texto-hola, .texto-hola ul {
        justify-content: center;
        align-items: center;
    }

    .contenedor-hola {
        flex-wrap: wrap;
    }

    .texto-hola {
        padding: 5px;
        width: 100vw;
    }

    .img-hola {
        width: 70%;
        margin-top: 20px;
    }

    /*-------------------------
            TEXTOS
    -------------------------*/

    .p-hola, h1, h3 {
        text-align: center;
    }

    h1 {
        font-size: 72px;
    }

    h3 {
        font-size: 25px;
    }

    .ico-quote {
        margin-bottom: 35px;
        height: 90px;
    }

    /*--------------------------------
            SECCIÓN SKILLS
    ----------------------------------*/

    /* -- CAJA DE TARJETAS -- */
    .contenedor-skills {
        width: 100%;
    }

    .texto-skills {
        padding: 10px 100px;
    }

    /*--------------------------------
            SECCIÓN PROYECTOS
    ----------------------------------*/

    /* -- CAJA DE TARJETAS -- */

    .contenedor-proyectos {
        padding-left: 0;
        padding-right: 0;
    }

}

/*-------------------------
    @MEDIA CELULARES
-------------------------*/
@media (max-width: 599px) {

    /*--------------------------------
            NAV BAR HEADER
    ----------------------------------*/

    #ul-header {
        display: none;
    }

    #icono-burger {
        display: block;
        font-size: 30px;
        color: #007b67;
    }

    /*--------------------------------
            SECCIÓN HOLA
    ----------------------------------*/

    .seccion-hola, .contenedor-hola, .texto-hola, .texto-hola ul {
        justify-content: center;
        align-items: center;
    }

    .contenedor-hola {
        flex-wrap: wrap;
        margin-top: 0;
        padding: 0 0 30px 0;
    }

    .texto-hola {
        padding: 5px;
        width: 100vw;
    }

    .img-hola {
        width: 70%;
        margin: 20px;
    }

    .p-hola, h1, h3 {
        text-align: center;
    }

    /*--------------------------------
            TEXTOS
    ----------------------------------*/

    h1 {
        font-size: 60px;
    }

    h3 {
        font-size: 20px;
    }

    h2 {
        font-size: 30px;
    }

    /*--------------------------------
            SECCIÓN SKILLS
    ----------------------------------*/

    /* -- CAJA DE TARJETAS -- */
    .contenedor-skills {
        width: 100%;
        padding: 5px;
    }

    .texto-skills {
        padding: 10px 10px;
        margin: 10px;
        font-size: 16px;
    }

    /*--------------------------------
            SECCIÓN QUOTE
    ----------------------------------*/
    .p-quote {
        margin: 10px 50px;
    }

    .h3-quote {
        font-size: 50px;
    }

    .ico-quote {
        margin-bottom: 20px;
        height: 60px;
    }

    /*--------------------------------
            SECCIÓN PROYECTOS
    ----------------------------------*/
    .seccion-proyectos {
        padding-left: 10px;
        padding-right: 10px;
    }

    .botonera-proyectos {
        padding-top: 10px;
        padding-bottom: 0;
        flex-wrap: wrap;
    }

    /* -- MENÚ -- */
    .menu-proyectos {
        font-size: 14px;
    }

    /* -- CAJA DE TARJETAS -- */
    .contenedor-proyectos {
        padding-left: 0;
        padding-right: 0;
        padding-top: 5px;
    }

    /* -- CAJA DE CADA TARJETA -- */
    .proyectos {
        width: 230px;
        height: 230px;
        margin: 10px;
        padding: 10px;
    }

    /*--------------------------------
                FOOTER
    ----------------------------------*/
    /* -- MENÚ -- */
    .nav-footer {
        display: none
    }

    .img-contacto {
        width: 55px;
    }

    .amor {
        font-size: 14px;
    }

}
/* ... */

